<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="achiv">Achievements</string>
    <string name="action_info">Information</string>
    <string name="action_language">Language</string>
    <string name="action_main">Start</string>
    <string name="action_reset">Restart</string>
    <string name="action_setting">Settings</string>
    <string name="agree">I Agree</string>
    <string name="app_name">Find a cat</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="buttonOK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="channel_description">All notifications</string>
    <string name="channel_name">Find a Cat</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="cheat_help">Hint</string>
    <string name="cheat_message">Cats are the born masters of disguise! Do you want to take a hint for 10 points? You have %d</string>
    <string name="cheat_message_again">Cats are the born masters of disguise! Do you want to look at the hint again?</string>
    <string name="com.crashlytics.android.build_id">1ac0765d-f1d2-4785-bcf0-b946d6ddc377</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="fiandacat2">Other games</string>
    <string name="fmessage">Thank you for choosing our application! As a token of our gratitude do give you 100 points, which can be spent on hints. As already mentioned, our application will not contain in-game purchases! Obtain points can only be fair game. :) Read more in the section Information.</string>
    <string name="game1">Find a Cat 2</string>
    <string name="game2">Find a Cat 3</string>
    <string name="game_link">https://play.google.com/store/apps/details?id=srsdt1.findacat</string>
    <string name="game_over">The game is over!</string>
    <string name="game_over_text">"Oops, it seems the cats are over.
Good job"</string>
    <string name="gcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="gdpr_text">This game does not collect or use your personal data, but our partners (such as Google or Yandex) can collect certain impersonal information. For more details you can read our privacy policy.</string>
    <string name="get_points">+10 points.</string>
    <string name="hashTag">\#findacat</string>
    <string name="info">Information</string>
    <string name="info_message">"The goal of the game is to find the cat as soon as possible and touch it muzzle.
It's fun!

Bonus points that can be spent on hints are credited for each cat, found without a hint."</string>
    <string name="locked">Achievement locked</string>
    <string name="lost_points">-10 points.</string>
    <string name="message_end">"Cats are over.

You had to perform %d clicks on the screen to find all masters of disguise.

You can reset the progress by clicking the Reset button bellow and look for cats again! Have fun!"</string>
    <string name="not_coins">Not enough points :(</string>
    <string name="nul_success">Success! You can find cats again.</string>
    <string name="other_message">We offer you to play in other parts of our game :)</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="permission_message">Please allow the game to access the memory of your device! Without this, we will not be able to attach a card of achievement!</string>
    <string name="policy">Policy</string>
    <string name="regular_notification">Cats waiting you!</string>
    <string name="reset_sure">This action will reset the whole game progress. Do you want to continue?</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="share">Share</string>
    <string name="share_achievement">Share achievement</string>
    <string name="share_achiv">I got an achievement \"%s\" in the game Find the Cat! Join now!</string>
    <string name="share_game">Share game</string>
    <string name="sound_button_off">Sound</string>
    <string name="sound_button_on">Sound</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="sure">Are you sure?</string>
    <string name="timer">You found a cat for:</string>
    <string name="tw_error">Something went wrong :(</string>
    <string name="tw_post">I like to search the cats in the game Find a cat for Android! #FindACat https://play.google.com/store/apps/details?id=srsdt1.findacat</string>
    <string name="unlocked">New achievement unlocked!</string>
    <string name="vibro_button_off">Vibro</string>
    <string name="vibro_button_on">Vibro</string>
</resources>
