<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="center" android:id="@+id/dialog_other_games_main" android:layout_width="320.0dip" android:layout_height="230.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center" android:background="@drawable/dialog_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="12.0dip">
        <TextView android:id="@+id/TextView01" android:text="@string/other_message" style="@style/mStyleDialogText" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:layout_alignParentBottom="true" android:layout_marginStart="40.0dip" android:layout_marginEnd="40.0dip">
            <Button android:textSize="18.0sp" android:textColor="@color/colorWhite" android:id="@+id/ButtonGameCat2" android:background="@drawable/button" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginBottom="17.0dip" android:text="@string/game1" />
            <Button android:textSize="18.0sp" android:textColor="@color/colorWhite" android:id="@+id/ButtonGameCat3" android:background="@drawable/button" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/game2" />
        </LinearLayout>
    </RelativeLayout>
    <Button android:id="@+id/ButtonCancel" style="@style/mStyleDialogButtonClose" />
</RelativeLayout>