<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/catbg"
        android:gravity="center"
        android:orientation="vertical">

    <LinearLayout
            android:id="@+id/other_games"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16.0dip"
            android:background="@drawable/other_games_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="14.0dip"
            android:paddingTop="5.0dip"
            android:paddingRight="14.0dip"
            android:paddingBottom="5.0dip">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6.0dip"
                android:text="@string/fiandacat2"
                android:textColor="@color/colorWhite" />

        <ImageView
                android:id="@+id/other_games_btn"
                android:layout_width="30.0dip"
                android:layout_height="30.0dip"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/ic_drchast" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical">

        <LinearLayout style="@style/mStyleLinearLayoutWeightSum">

            <LinearLayout style="@style/mStyleLinearLayout_weight">

                <Button
                        android:id="@+id/startGameBtn"
                        style="@style/mStyleButton"
                        android:drawableLeft="@drawable/ic_play"
                        android:text="@string/action_main" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/mStyleLinearLayoutWeightSum">

            <LinearLayout style="@style/mStyleLinearLayout_weight">

                <Button
                        android:id="@+id/achievementsBtn"
                        style="@style/mStyleButton"
                        android:drawableLeft="@drawable/ic_achiv"
                        android:onClick="openAchievementsScreen"
                        android:text="@string/achiv" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/mStyleLinearLayoutWeightSum">

            <LinearLayout style="@style/mStyleLinearLayout_weight">

                <Button
                        android:id="@+id/shareBtn"
                        style="@style/mStyleButton"
                        android:drawableLeft="@drawable/ic_share"
                        android:text="@string/share" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/mStyleLinearLayoutWeightSum">

            <LinearLayout style="@style/mStyleLinearLayout_weight">

                <Button
                        android:id="@+id/settingsBtn"
                        style="@style/mStyleButton"
                        android:drawableLeft="@drawable/ic_settings"
                        android:text="@string/action_setting" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>